<resources>
    <string name="app_name">React! Multiplayer Game</string>
    <string name="google_play" translatable="false">https://play.google.com/store/apps/details?id=</string>
    <string name="sharethisapptoast">Share this app with your friends!</string>
    <string name="quick_play">Quick Play</string>
    <string name="custom_game">Custom Game</string>
    <string name="shop">Shop</string>
    <string name="shop_caps">SHOP</string>
    <string name="rate_this_app">Rate this App</string>
    <string name="choosedifficulty">CHOOSE DIFFICULTY</string>
    <string name="easy">EASY</string>
    <string name="medium">MEDIUM</string>
    <string name="hard">HARD</string>
    <string name="insane">INSANE</string>
    <string name="number_of_players">NO. OF PLAYERS</string>
    <string name="edit_names">Edit Names</string>
    <string name="start">START</string>
    <string name="playerprofile">PLAYERS\' PROFILES</string>
    <string name="player_1">PLAYER 1</string>
    <string name="player_2">PLAYER 2</string>
    <string name="player_3">PLAYER 3</string>
    <string name="player_4">PLAYER 4</string>
    <string name="enterplayer1">Player One</string>
    <string name="enterplayer2">Player Two</string>
    <string name="enterplayer3">Player Three</string>
    <string name="enterplayer4">Player Four</string>
    <string name="colortag">TAG:</string>
    <string name="done">DONE</string>
    <string name="cancel">CANCEL</string>
    <string name="cancel_smallcaps">Cancel</string>
    <string name="customname">Custom Name</string>
    <string name="tagnote">Note: Tag is the color of the Player\'s Button</string>
    <string name="reset">Reset</string>
    <string name="insanemodedescription">Insane Mode is only available on Purchase. Purchase Insane Mode Now?</string>
    <string name="insanemode_gotoshop">Go to Shop</string>
    <string name="customgame_caps">CUSTOM GAME</string>
    <string name="selectgamemodes">Select Game Modes</string>
    <string name="selectall">Select All</string>
    <string name="selectnone">Select None</string>
    <string name="randomizeorder">Randomize Order</string>
    <string name="customgame0gamemode">Select at least 1 Game Mode!</string>
    <string name="customgame_somethingwrong">Unable to start Custom Game. Select your Game Modes again.</string>
    <string name="restorepurchase">Restore your purchase</string>
    <string name="removeads">Remove Ads</string>
    <string name="insaneMode">INSANE Mode</string>
    <string name="nomoreads">No More Ads!</string>
    <string name="findoutmore">Find out more</string>
    <string name="buynow">Buy Now!</string>
    <string name="soldout">Sold Out!</string>
    <string name="successfullypurchased">Successfully Purchased!</string>
    <string name="successfullyrestored">Successfully Restored!</string>
    <string name="errorpurchased">An error occurred. Please try again later.</string>
    <string name="errorpurchased_noconnection">Unable to fetch price. Please check your internet connection.</string>
    <string name="restorepurchasednointernet">Unable to connect to Google Play Store. Please check your connection and try again.</string>
    <string name="restorepurchasednopurchase">Your current Google Play Store account has no purchases.</string>
    <string name="settings">Settings</string>
    <string name="gameplaysettings">Game Play Settings</string>
    <string name="scorepercorrectans">Score per Correct Answer</string>
    <string name="scoreperwrongans">Score per Wrong Answer</string>
    <string name="current">Current: </string>
    <string name="roundpergame">Rounds per Game</string>
    <string name="roundpergame_message">(Only applies to Quick Play)</string>
    <string name="callnextgameround">Call next Game Round</string>
    <string name="callnextgameround_dialogtitle">Call next round after&#8230;</string>
    <string name="callnextgameround_desc">How long before next Game Round is called</string>
    <string name="correctanswer">correct answer</string>
    <string name="correctanswers">correct answers</string>
    <string name="answerdelaytime">Answer Delay Time</string>
    <string name="answerdelaytime_desc">How long the answers are flashed after a player pressed on the button</string>
    <string name="react">React!</string>
    <string name="developersletter">Developer\'s Letter</string>
    <string name="developersletter_desc">Message from the Developer</string>
    <string name="policy">Policy</string>
    <string name="policy_desc">Privacy Policy and Parents Guide</string>
    <string name="helpustranslate">Help us Translate!</string>
    <string name="helpustranslate_desc">Translate this app to other languages</string>
    <string name="sendusfeedback">Send us Feedback</string>
    <string name="sendusfeedback_desc">We would love to hear from you!</string>
    <string name="about">About</string>
    <string name="faq">FAQ</string>
    <string name="faq_desc">Frequently Asked Questions</string>
    <string name="credits">Credits</string>
    <string name="credits_desc">The contributors for this app</string>
    <string name="Version">Version</string>
    <string name="second">sec</string>
    <string name="credits_contactus">Contact Us</string>
    <string name="sendemailvia">Send email via</string>
    <string name="faq_qn1">Is this game available on iOS?</string>
    <string name="faq_qn1_desc">This game is currently only available on Android. We have no plan for an iOS release yet.</string>
    <string name="faq_qn2">How long do I have access to the Remove Ads and Insane Mode features if I were to purchase them?</string>
    <string name="faq_qn2_desc">You will have a lifetime access. As the purchase transaction is handled by Google, the purchase is tied to your Google Play account.
            As long as you use the same Google account, you can click on \"Restore your Purchase\" in the Shop page, and have your previous purchase restored.</string>
    <string name="faq_qn3">I have purchased the Remove Ads or Insane Mode feature, but it was not reflected.</string>
    <string name="faq_qn3_desc">This can happen if you delete the game and reinstall it, or install it on another device. It may also happen if you manually clear this app\'s data
            from your phone\'s application setting page. In any case, you can always click on \"Restore your purchase\" and have your previous purchase restored, as long as
            you are using the same Google account. If this does not work, try to reinstall the app and click on \"Restore your purchase\" again.</string>
    <string name="faq_qn4">Is this game available in other languages?</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="privacypolicy_text1">Your privacy is important to us!</string>
    <string name="privacypolicy_text2">Personal Information</string>
    <string name="privacypolicy_text3">We do not collect any personal information that could identify you, and hence, we do not disclose any of your personal information.
        Exception includes when you contact us by email. Please read \'Information you provide\' section below.</string>
    <string name="privacypolicy_text4">Cookies</string>
    <string name="privacypolicy_text5">We do not use cookies ourselves. Hence, no information on your part is stored by us. However, third party Ads Network may use cookies
        to deliver interest-based Ads to you.</string>
    <string name="privacypolicy_text6">Other Information</string>
    <string name="privacypolicy_text7">We use Firebase Analytics by Google, which may collect information that may include, but not limited to,
        user\'s date of install, frequency of use, functionality of app used, country, etc, for used in the following circumstances:\n\n
\t\t 1) To have a better understanding of user\'s demographic\n\n
\t\t 2) To better enhance the current product by understanding user\'s origin and functionality of app used\n\n
        We use Fabric Crashlytics by Google to collect Crash Reports from users when the app crashed. The Crash Report sent to us may include your device
        model, Android Version, and the part of the code where the crash occurs. No part of this Crash Reports can directly identify an individual personally.</string>
    <string name="privacypolicy_text8">Advertisement</string>
    <string name="privacypolicy_text9">We show the Ads provided by global network partners such as \'Google Admob\' and \'Facebook Audience Network\'. \n\nThe
        third party providers may collect information from your part in which we have no control over.
        Information may include but not limited to your gender, country of origin, age, likes and dislikes etc, so as to serve you more relevant ads.</string>
    <string name="privacypolicy_text10">Information you provide</string>
    <string name="privacypolicy_text11">If you contact us for support or to give feedback,
        we may obtain and maintain any information you choose to provide, including your name, email addresses, attachment (if any),
        contact info as well as information about your mobile devices or other digital devices. We will use this information only to improve our product
        as well as to address the issue that you mentioned, and not share it with third parties unless required by law.
        \n\nBy emailing us, you agree that you are above the age of 13 and consent to us storing your email records in our database. In the event you are below the age
        of 18, you agree that the email you sent to us are vetted and given permission by your legal parent or guardian, and that they understood that email and information
        you provided may be stored in our database for reference purposes.</string>
    <string name="parentsguide">Parents Guide</string>
    <string name="parentsguide_text1">We require all users who downloaded and use this app to be above the age of 13. This is to be in line with COPPA and policies from third
        party network such as Facebook Audience Network and Google Admob when serving Ads, as well as Firebase Analytics from Google which may collect information from users.</string>
    <string name="parentsguide_text2">How can I manage or turn off In-app-purchase?</string>
    <string name="parentsguide_text3">This game is free to download and play, but contains two In-app-purchases:\n\n\t\t-Remove Ads\n\t\t-Unlock Insane Mode\n\nThese
        purchases are never required to play the game, but can be used to enhance the gameplay. In-app-purchase are paid for with real money, and are always
        labeled as such. You can easily manage the ability to make in-app-purchase, adjust password protection settings, or disable in-app-purchase entirely. To do so,
        open Google Playstore on your device, and go to \'User controls\' section in the Playstore Settings page. This can prevent your child from making unintentional in-app-purchase.</string>
    <string name="parentsguide_text4">Who processes the In-app-purchase transactions?</string>
    <string name="parentsguide_text5">We do not handle the In-app-purchase transactions. The payment transactions themselves are completed through Google Play via
        your personal email address associated with that account. Receipts for these transactions are emailed to you by Google.\n\nTherefore, we do not have
        access to any of your personal and credit card information, as the transaction are completed through Google Play.</string>
    <string name="parentsguide_text6">Need help?</string>
    <string name="parentsguide_text7">We are here to help! You can read through our FAQ page which answers some of the frequently asked questions. For
        further assistance, you can contact us at contact@ninebitstudio.com. We will be happy to hear from you!</string>
</resources>