<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_marginLeftPercent="10%"
    app:layout_marginRightPercent="10%"
    >


    <TextView
        android:id="@+id/customgame_selectgamemodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectgamemodes"
        android:textColor="@color/primaryBlueForMainPage"
        app:layout_marginLeftPercent="5%"
        app:layout_marginTopPercent="1%"
        android:textSize="@dimen/_14ssp"
        />

    <TextView
        android:id="@+id/customgame_numberSelected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="3/21"
        android:textColor="@color/primaryBlueForMainPage"
        app:layout_marginRightPercent="5%"
        app:layout_marginTopPercent="1%"
        android:textSize="@dimen/_14ssp"
        android:layout_alignParentRight="true"
        />

    <android.support.percent.PercentRelativeLayout
        android:id="@+id/customgame_contentRectangle"
        android:layout_width="match_parent"
        app:layout_heightPercent= "69%"
        app:layout_marginRightPercent="5%"
        app:layout_marginLeftPercent="5%"
        app:layout_marginTopPercent="1%"
        android:layout_below="@id/customgame_selectgamemodes"
        android:background="@drawable/customgame_contentrectangle">

        <!-- We cant add margin right becos it will cause the scroll bar to margin right as well-->
        <ListView
            android:id="@+id/customGameListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_marginLeftPercent="4.5%"
            >
        </ListView>
    </android.support.percent.PercentRelativeLayout>

    <com.react.reactmultiplayergame.helper.AutoResizeTextView
        android:id="@+id/customgame_selectAll_Button"
        app:layout_heightPercent= "12%"
        app:layout_widthPercent= "29%"
        android:layout_below="@id/customgame_contentRectangle"
        app:layout_marginTopPercent="2%"
        app:layout_marginLeftPercent="5%"
        android:text="@string/selectall"
        android:background="@drawable/editplayername_cancelselector"
        android:gravity="center"
        android:textColor="@color/primaryOrangeForMainPage"
        android:textSize="@dimen/_13ssp"
        android:maxLines="2"
        android:clickable="true"
        />

    <com.react.reactmultiplayergame.helper.AutoResizeTextView
        android:id="@+id/customgame_selectNone_Button"
        app:layout_heightPercent= "12%"
        app:layout_widthPercent= "30%"
        android:layout_below="@id/customgame_contentRectangle"
        app:layout_marginTopPercent="2%"
        app:layout_marginLeftPercent="1%"
        android:layout_toRightOf="@id/customgame_selectAll_Button"
        android:text="@string/selectnone"
        android:background="@drawable/editplayername_cancelselector"
        android:gravity="center"
        android:textColor="@color/primaryOrangeForMainPage"
        android:textSize="@dimen/_13ssp"
        android:padding="@dimen/_4sdp"
        android:maxLines="2"
        android:clickable="true"
        />

    <!-- Background set programmatically -->
    <com.react.reactmultiplayergame.helper.AutoResizeTextView
        android:id="@+id/customgame_randomizeOrder_Button"
        app:layout_heightPercent= "12%"
        app:layout_widthPercent= "29%"
        android:layout_below="@id/customgame_contentRectangle"
        app:layout_marginTopPercent="2%"
        app:layout_marginLeftPercent="1%"
        android:layout_toRightOf="@id/customgame_selectNone_Button"
        android:text="@string/randomizeorder"
        android:gravity="center"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_13ssp"
        android:padding="@dimen/_4sdp"
        android:maxLines="2"
        android:clickable="true"
        />
</android.support.percent.PercentRelativeLayout>